# payments-mcc-classification

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_merchant_metadata_table.py  003_add_tenant_isolation.py
app/: main.py
app/api/v1/: auto_creation.py  embeddings.py  external_merchants.py  health.py  mccs.py  merchants.py  outbox.py
app/core/: __init__.py  auth.py  config.py  context.py  database.py  dependencies.py  exceptions.py  lifecycle.py  middleware.py
app/models/: __init__.py  embedding.py  external_merchant.py  mcc.py  merchant.py  merchant_metadata.py
app/pipeline/: __init__.py  base_step.py  decorators.py  engine.py  registry.py
app/pipeline/auto_creation/: __init__.py  check_existence.py  create_merchant.py  generate_embedding.py  google_places_enrichment.py  llm_research.py  mcc_classification.py  notify_downstream.py  topic_classification.py
app/pipeline/steps/: __init__.py  test_steps.py
app/pipeline/validation/: __init__.py  (+3 more)
app/providers/: __init__.py  embedding.py  google_places.py  s3.py  sns.py
app/repositories/: embedding_repository.py  external_merchant_repository.py  mcc_repository.py  merchant_metadata_repository.py  merchant_repository.py  outbox_repository.py
app/schemas/: __init__.py
app/services/: external_merchant_service.py  mcc_service.py  merchant_service.py
app/workers/: outbox_processor.py
config/: demo_topics.yaml
openspec/: PHASE_4_COMPLETE.md  archive.md  design.md  proposal.md  spec.md  tasks.md
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_merchant_flow.py
tests/unit/: test_pipeline_engine.py  test_providers.py
(+21 files in other folders)
