[tool.poetry]
name = "payments-mcc-classification"
version = "1.0.0"
description = "Merchant classification microservice with Python/FastAPI"
authors = ["syfra3 <opensource@syfra3.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/syfra3/payments-mcc-classification"
repository = "https://github.com/syfra3/payments-mcc-classification"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = "^0.104"
uvicorn = {version = "^0.24", extras = ["standard"]}
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = "^2.5"
pydantic-settings = "^2.1"
pgvector = "^0.2"
httpx = "^0.25"
langchain = "^0.1"
langchain-openai = "^0.1"
langfuse = "^2.0"
openai = "^1.3"
python-dotenv = "^1.0"
structlog = "^24.1"
tenacity = "^8.2"
boto3 = "^1.34"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-httpx = "^0.25"
black = "^23.12"
ruff = "^0.1"
mypy = "^1.7"
factory-boy = "^3.3"
faker = "^22.0"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
